--- a/shopServer/templates/drawManage.html
+++ b/shopServer/templates/drawManage.html
@@ -1,11 +1,30 @@
 {% extends "base.html" %}
+
+
+{% block contentLeft %} 抽奖管理
+    <small>Version 5.0</small> 
+{% endblock %}
+
+{% block contentRight %}
+
+	<ol class="breadcrumb">
+		<li>
+			<a href="#"><i class="fa fa-dashboard"></i> Home</a>
+		</li>
+		<li class="active">抽奖管理</li>
+	</ol>
+{% endblock %}
+
+
 {% block content %}
 
 
 <form action="http://localhost:8000/drawJsonAdd/" method="post">
 <input type="text" name="userid" placeholder="请输入用户id">
 <br>
-<input type="text" name="balance" placeholder="请输入余额">
+<input type="text" name="drawmoney" placeholder="请输入抽奖金额">
+<br>
+<input type="text" name="drawdetail" placeholder="请输入抽奖活动详情">
 <br>
 <input type="submit" value="提交">
 </form>
@@ -13,16 +32,18 @@
 <form action="http://localhost:8000/drawJsonDel/" method="post">
 <input type="text" name="userid" placeholder="请输入要删除的用户id">
 <br>
+<input type="text" name="drawid" placeholder="请输入要删除的抽奖id">
+<br>
 <input type="submit" value="提交">
 </form>
 <br>
-<form action="http://localhost:8000/drawJsonUpdate/" method="post">
+<!-- <form action="http://localhost:8000/drawJsonUpdate/" method="post">
 <input type="text" name="userid" placeholder="请输入要修改的用户id">
 <br>
-<input type="text" name="balance" placeholder="请输入余额">
+<input type="text" name="drawmoney" placeholder="请输入余额">
 <br>
 <input type="submit" value="提交">
-</form>
+</form> -->
 <br>
 <form action="http://localhost:8000/drawJsonQuery/" method="post">
 <input type="text" name="userid" placeholder="请输入要查询的用户id">
