--- a/shopServer/templates/userManage.html
+++ b/shopServer/templates/userManage.html
@@ -21,7 +21,8 @@
 		th{
 			background-color: #F2F9FE;
 		}
-		#userTable .nature{
+		#natureEle .nature{
+            text-align: center;
 			background-color: #F2F9FE;
 		}
 		#userTable .ele{
@@ -41,6 +42,10 @@
 		.btn-default{
 			color: white;
 		}
+        #preview{
+            width: 40;
+            height: 40px;
+        }
 		#under .bottom{
 			background-color: white;
 			border:1px solid lightgrey;
@@ -66,16 +71,17 @@
 	
             
         <table  class="table table-bordered">
-            <th colspan="11">
+            <th colspan="12">
                 
                     <button class="btn btn-default trash AllDelete"><span class = "glyphicon glyphicon-trash">批量删除</span></button>
                     <button class="btn btn-default plus btn btn-primary" data-toggle="modal" data-target="#plusModal" ><span class = "glyphicon glyphicon-plus">添加会员</span></button>
                     <label id="userNumber" class="count" style="float: right; padding-right: 4%;">共有数据</label>
 
             </th>
-            <tr>
+            <tr id = "natureEle">
                 <td class="info nature"><input type="checkbox" id = "checkbox-all"></td>
                 <td class="info nature">序号</td>
+                <td class="info nature">ID</td>
                 <td class="info nature">会员名</td>
                 <td class="info nature">密码</td>
                 <td class="info nature">电话</td>
@@ -143,10 +149,11 @@
 
 {% block script %}
 <script src="{% static 'layer/layer.js' %}" type="text/javascript" charset="utf-8"></script>
-    
+<script src="{% static 'js/jquery.form.min.js' %}"></script>   
     
 
     <script type="text/javascript">
+    	
 
     $('.addform').on('submit', function(e) {
         console.log("jjjjjj");
@@ -178,6 +185,7 @@
         function dataParse(data){
             for(i=0 ; i<data.data.length ; i++){
                 mydata =  data.data[i]
+                var NO = i+1;
                 var userid = mydata["userid"];
                 var username = mydata["username"];
                 var pwd = mydata["pwd"];
@@ -187,10 +195,9 @@
                 var acountmoney = mydata["acountmoney"];
                 var power = mydata["power"];
                 var activecode = mydata["activecode"];
-                var ele = '<tr class="mytr" userid = "' + userid + '" username = "' + username + '" pwd = "' + pwd + '" phone = "' + phone + '" wxid = "' + wxid + '" acountmoney = "' + acountmoney + '" headimg="' + headimg +'"  power = "' + power + '" activecode = "' + activecode + '"><td class="info ele"><input class="checkbox-one" name="checkbox-one" type="checkbox"/></td><td class="info ele">' + userid + '</td><td class="info ele">' + username + '</td><td class="info ele">' + pwd + '</td><td class="info ele">' + phone + '</td><td class="info ele">' + wxid + '</td><td class="info ele"><img height="40px" width="40px" src="http://localhost:8000/static/myfile/' + headimg +'" alt=""></td><td class="info ele">' + acountmoney + '</td><td class="info ele">' + power + '</td><td class="info ele">' + activecode + '</td><td class="info ele"><button class="btn btn-default edit btn-primary" data-toggle="modal" data-target="#editModal' + userid + '">编辑</button>     <button class="btn btn-default delete">删除</button></td></tr>'
+                var ele = '<tr class="mytr" NO="'+ NO + '" userid = "' + userid + '" username = "' + username + '" pwd = "' + pwd + '" phone = "' + phone + '" wxid = "' + wxid + '" acountmoney = "' + acountmoney + '" headimg="' + headimg +'"  power = "' + power + '" activecode = "' + activecode + '"><td class="info ele"><input class="checkbox-one" name="checkbox-one" type="checkbox"/></td><td class="info ele">' + NO + '</td><td class="info ele">' + userid + '</td><td class="info ele">' + username + '</td><td class="info ele">' + pwd + '</td><td class="info ele">' + phone + '</td><td class="info ele">' + wxid + '</td><td class="info ele"><img height="40px" width="40px" src="http://localhost:8000/static/myfile/' + headimg +'" alt=""></td><td class="info ele">' + acountmoney + '</td><td class="info ele">' + power + '</td><td class="info ele">' + activecode + '</td><td class="info ele"><button class="btn btn-default edit btn-primary" data-toggle="modal" data-target="#editModal' + userid + '">编辑</button>     <button class="btn btn-default delete">删除</button></td></tr>'
                 $(".myModal").empty();
                 $("#userTable").append(ele);
-             
             }
             $(".delete").click(function(){
                 var that = $(this).parents('tr');
@@ -204,10 +211,8 @@
                 })
             })
             $(".edit").click(function(){
-                // console.log("jklajskldf");
 
                 var that = $(this).parents("tr");
-                console.log(that)
                 var userid = that.attr('userid');
                 aaa = userid;
                 var username = that.attr('username');
@@ -218,14 +223,12 @@
                 var acountmoney = that.attr('acountmoney');
                 var power = that.attr('power');
                 var activecode = that.attr('activecode');
-                console.log(username);
-                var ele = '<div class="modal fade bs-example-modal-sm theEditModal" id="editModal' + userid + '" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"><div class="modal-dialog" role="document"><div class="modal-content"><div class="modal-header"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button><h4 class="modal-title">修改会员资料</h4></div><div class="modal-header" id="updetaModal"><form class="editFormContent" action="http://localhost:8000/userManageJsonUpdate/" method="post"><div class="form-group"><label for="recipient-name" class="control-label">序号：</label><input type="text" class="form-control" name="userid" value="' + userid + '" readonly="readonly"></div><div class="form-group"><label for="recipient-name" class="control-label">会员名:</label><input type="text" class="form-control" name="username" value="' + username + '"></div><div class="form-group"><label for="recipient-name" class="control-label">密码:</label><input type="text" class="form-control" name="pwd" value="' + pwd + '"></div><div class="form-group"><label for="recipient-name" class="control-label">电话:</label><input type="text" class="form-control" name="phone" value="' + phone + '"></div><div class="form-group" enctype="multipart/form-data"><label for="recipient-name" class="control-label">头像:</label><input type="file" accept="image/gif, image/jpeg" class="form-control" name="headimg" value="' + headimg + '"></div><div class="form-group"><label for="recipient-name" class="control-label">账户余额:</label><input type="text" class="form-control" name="acountmoney" value="' + acountmoney + '"></div><div class="form-group"><label for="recipient-name" class="control-label">等级:</label><input type="text" class="form-control" name="power" value="' + power + '"></div><div class="form-group"><label for="recipient-name" class="control-label">激活码:</label><input type="text" class="form-control" name="activecode" value="' + activecode +'"></div><input type="submit" class="btn btn-primary" value="更新"></form></div></form></div></div></div></div>'
+                var ele = '<div class="modal fade bs-example-modal-sm theEditModal" id="editModal' + userid + '" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"><div class="modal-dialog" role="document"><div class="modal-content"><div class="modal-header"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button><h4 class="modal-title">修改会员资料</h4></div><div class="modal-header" id="updetaModal"><form class="editFormContent" action="http://localhost:8000/userManageJsonUpdate/" method="post"><div class="form-group"><label for="recipient-name" class="control-label">序号：</label><input type="text" class="form-control" name="userid" value="' + userid + '" readonly="readonly"></div><div class="form-group"><label for="recipient-name" class="control-label">会员名:</label><input type="text" class="form-control" name="username" value="' + username + '"></div><div class="form-group"><label for="recipient-name" class="control-label">密码:</label><input type="text" class="form-control" name="pwd" value="' + pwd + '"></div><div class="form-group"><label for="recipient-name" class="control-label">电话:</label><input type="text" class="form-control" name="phone" value="' + phone + '"></div><div class="form-group" enctype="multipart/form-data"><label for="recipient-name" class="control-label">头像:</label><img id="preview" /><textbox><input name="goodsid" class="myGoodsid" type="text" value="" hidden><input type="file" name="headimg" id= "images" onchange="imgPreview(this)" accept="image/gif, image/jpeg" value="' + headimg + '"></textbox></div><div class="form-group"><label for="recipient-name" class="control-label">账户余额:</label><input type="text" class="form-control" name="acountmoney" value="' + acountmoney + '"></div><div class="form-group"><label for="recipient-name" class="control-label">等级:</label><input type="text" class="form-control" name="power" value="' + power + '"></div><div class="form-group"><label for="recipient-name" class="control-label">激活码:</label><input type="text" class="form-control" name="activecode" value="' + activecode +'"></div><input type="submit" class="btn btn-primary" value="更新"></form></div></form></div></div></div></div>'
                 $(".myModal").empty();
                 
                 $(".myModal").append(ele)
 
                 $(".editFormContent").eq(0).on("submit" , function(e){
-                    console.log("jkajskdjkflkd");
                     e.preventDefault();
                     $(this).ajaxSubmit({
                         success:function(result){
@@ -259,7 +262,47 @@
         });
 
         
+        function imgPreview(fileDom){
+        //判断是否支持FileReader
+        if (window.FileReader) {
+            var reader = new FileReader();
+        } else {
+            alert("您的设备不支持图片预览功能，如需该功能请升级您的设备！");
+        }
 
+        //获取文件
+        var file = fileDom.files[0];
+        
+        var imageType = /^image\//;
+        //是否是图片
+        if (!imageType.test(file.type)) {
+            alert("请选择图片！");
+            return;
+        }
+        //读取完成
+        reader.onload = function(e) {
+            //获取图片dom
+            var img = document.getElementById("preview");
+            //图片路径设置为读取的图片
+            img.src = e.target.result;
+        };
+        
+        reader.readAsDataURL(file);
+        
+    }
+
+    function getUrlParam(name){
+		var reg = new RegExp("(^|&)"+ name +"=([^&]*)(&|$)");
+		var r = window.location.search.substr(1).match(reg);
+		if (r!=null) return unescape(r[2]); return null;
+	}
+		
+		
+	
+	var goodsid = getUrlParam("goodsid")
+
+
+    $(".myGoodsid").val(goodsid);
 
         $('#checkbox-all').click(function () {
             if($('#checkbox-all').is(':checked')) {
@@ -290,7 +333,6 @@
             dataType : 'json',
             success : function(data)
             {   
-                console.log(data);
                 if(data.data!=""){
                     layer.msg("查找成功")
                 }
@@ -361,7 +403,6 @@
         xmlhttp.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded')
         xmlhttp.send("data = " + postdata);
     }
-    
         
     </script>
 
