--- a/shopServer/templates/base.html
+++ b/shopServer/templates/base.html
@@ -11,6 +11,13 @@
 		<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 		<link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
 		<link rel="stylesheet" href="{% static 'dist/css/AdminLTE.min.css' %}">
+		
+		<script type="text/javascript">
+			if (localStorage.getItem("keySss")!="ok"){
+				window.location.href="http://localhost:8000"
+			}
+		</script>
+		
 		<link rel="stylesheet" href="{% static 'dist/css/skins/_all-skins.min.css' %}">
 
 		<style type="text/css">
@@ -660,6 +667,7 @@
 
 		<script src="{% static 'js/tool.js' %}"></script>
 		<script type="text/javascript">
+			
 			$('.treeview-menu').find('a').each(function() {
 				if(this.href == document.location.href || document.location.href.search(this.href) >= 0) {
 					$(this).parent().addClass('active'); // this.className = 'active';
