--- a/shopServer/templates/historyManage.html
+++ b/shopServer/templates/historyManage.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 <div class="container-fluid ">
-	<div class="row" id = "myrow">
+	<div class="row" >
 		<div class="col-md-4 col-md-offset-3">
 			<div><input type="text" class="form-control" name = "userid" id="userid" placeholder="用户名"></div>
 		</div>
@@ -93,7 +93,7 @@
 		// 		});
         //     }
         // });
-		function addToHtml(data , i , yeNumber) {
+		function addToHtml(data , i) {
 			userid = data["userid"]
 			lookid = data["lookid"]
 			goodsid = data["goodsid"]
@@ -132,7 +132,7 @@
 				defaultOptions = cucrrentOptioins;
 			} else {
 				var page = 1 
-				var defaultOptions = {
+				defaultOptions = {
 					totalPages:yeNumber,
 					first: "首页",
 					last: "尾页",
@@ -186,7 +186,7 @@
 						$("#mytbody").children("tr").remove()
 						for(var i = 0; i < result["data"].length; i++) {
 							data = result["data"][i]
-							addToHtml(data , i , lookListPages)
+							addToHtml(data , i)
 						}
 						$(".deletespan").click(function() {
 							console.log("我是删除按钮")
