--- a/shopServer/templates/redpack.html
+++ b/shopServer/templates/redpack.html
@@ -1,4 +1,164 @@
-{% extends "base.html" %} 
+{% extends "base.html" %}
 {% block content %}
-<p>这是红包设置界面</p>
+<div class="container-fluid">
+    <form class="form-inline searchForm" id="searchForm" role="form" method="post">
+        <div class="form-group">
+            <label class="" >红包账号:</label>
+            <input type="text" class="form-control" name="userid" id="userid" placeholder="请输入用户名">
+        </div>
+        <button type="submit" class="btn btn-default submit search"><span class = "glyphicon glyphicon-search">红包查询</span></button>
+    </form>
+    <hr/>
+
+        
+    <table  class="table table-bordered">
+        <th colspan="7">      
+                <button class="btn btn-default plus btn btn-primary" data-toggle="modal" data-target="#plusModal" ><span class = "glyphicon glyphicon-plus">添加红包</span></button>
+        </th>
+        <tr>
+            <!-- <td class="info nature"><input type="checkbox" id = "checkbox-all"></td> -->
+            <td class="info nature">序号</td>
+            <td class="info nature">用户编号</td>
+            <td class="info nature">红包账号</td>
+            <td class="info nature">获取途径</td>
+            <td class="info nature">金额</td>
+            <td class="info nature">获取时间</td>
+            <td class="info nature">编辑</td>
+        </tr>
+        
+        <tbody id="userTable">
+
+        </tbody>
+               
+    </table>
+</div>
+<div id="plusModal" class="modal fade" tabindex="-1" role="dialog" data-backdrop="false" data-show="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">添加红包</h4>
+            </div>
+            <div class="modal-body">
+                <form class="addform" action="http://localhost:8000/redpackAdd/" method="post">
+                    <div class="form-group">
+                    <label for="recipient-name" class="control-label">用户账号:</label>
+                    <input type="text" class="form-control" name="userid">
+                    </div>
+                    <div class="form-group">
+                            <label for="recipient-name" class="control-label">红包账号:</label>
+                            <input type="text" class="form-control" name="redpackid">
+                            </div>
+                    <div class="form-group">
+                    <label for="recipient-name" class="control-label">获取途径:</label>
+                    <input type="text" class="form-control" name="getpath">
+                    </div>
+                    <div class="form-group">
+                        <label for="recipient-name" class="control-label">红包金额:</label>
+                        <input type="text" class="form-control" name="money">
+                        </div>
+                    <input type="submit" class="btn btn-primary" value="添加">
+                </form>
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+{% endblock %}
+
+{% block script%}
+<script>
+    function aaa(){
+        var url="http://localhost:8000/redpackApi/";
+        $.ajax({
+                url: url, 
+                type: 'POST', 
+                success:"success",
+                success: function (data) {
+                    mydata=data.data;
+                    console.log(data);
+                    dataParse(data);
+                             
+                }, 
+                error: function (msg) {
+                    console.log(msg); //错误信息
+                }    
+            });
+
+    }
+    aaa();
+
+function dataParse(data){
+    for(i=0;i<data.data.length;i++){
+        mydata =  data.data[i]
+        var userid = mydata["userid"];
+        var redpackid = mydata["redpackid"];
+        var getpath = mydata["getpath"];
+        var money = mydata["money"];
+        var gettime = mydata["gettime"];
+        console.log(redpackid,getpath);
+        var ele ='<tr class="mytr" redpackid="' + redpackid + '"><td scope="row">1</td><td>'+userid+'</td><td>'+redpackid+'</td><td>' + getpath + '</td><td>' + money + '</td><td>' + gettime + '</td><td > <button class="btn btn-default delete">删除</button></td></tr>'
+        // $(".myModal").empty();
+        $("#userTable").append(ele);
+    }
+    $(".delete").click(function(){
+        var that = $(this).parents('tr');
+        var objData = that.attr('redpackid')
+        myPost("redpackDelete" , {orderid:objData} , function () {
+            $(that).remove();  
+        })
+    })
+}
+$('.addform').on('submit', function(e) {
+        console.log("jjjjjj");
+        e.preventDefault(); 
+        $(this).ajaxSubmit({
+            success: function (result) {
+                console.log(result);
+               
+                window.location.reload();
+                parent.$("#plusModal").hide();
+            }
+        })
+    });
+    $('#searchForm').on('submit', function(e) {
+            e.preventDefault(); 
+            $(this).ajaxSubmit({
+                success: function () {
+                    ajaxSubmitForm();
+            }
+        })
+        });
+    function ajaxSubmitForm(){
+        m=0;
+        console.log('ajaxsubmit');
+        var option = 
+        {
+            url : "http://localhost:8000/redpackApi/",
+            type : 'POST',
+            dataType : 'json',
+            success : function(data)
+            {   
+                console.log("????????????????????????????")
+                mydata = data
+               
+                $('.mytr').remove();
+                console.log(data)
+                dataParse(mydata)
+                
+                // document.getElementById("redpackid").value = "";
+                document.getElementById("userid").value = "";
+                
+                
+            },
+            error: function(data)
+            {
+                console.log("chucuole");
+            }
+        };
+        $("#searchForm").ajaxSubmit(option);
+        return false;
+    }
+</script>
 {% endblock %}
